# LambdaDesigner

./: .gitignore  FunctionalDesigner.cabal  LICENSE  LambdaDesigner.cabal  Lux.hs  Presentation.hs  README.md  Source.hs  Visuals.hs  ldesigner.el  scratch.hs  stack.yaml
LambdaDesigner/: Chop.hs  JSONOutput.hs  Lib.hs  OSC.hs  Op.hs  ParsedOps.hs
TD/: CrashAutoSave.toe  FunctionalDesigner.1.toe  FunctionalDesigner.10.toe  FunctionalDesigner.11.toe  FunctionalDesigner.12.toe  FunctionalDesigner.13.toe  FunctionalDesigner.14.toe  FunctionalDesigner.15.toe  FunctionalDesigner.16.toe  FunctionalDesigner.17.toe  FunctionalDesigner.18.toe  FunctionalDesigner.19.toe  FunctionalDesigner.2.toe  FunctionalDesigner.20.toe  FunctionalDesigner.21.toe  FunctionalDesigner.22.toe  FunctionalDesigner.23.toe  FunctionalDesigner.3.toe  FunctionalDesigner.4.toe  FunctionalDesigner.5.toe  FunctionalDesigner.6.toe  FunctionalDesigner.7.toe  FunctionalDesigner.8.toe  FunctionalDesigner.9.toe  FunctionalDesigner.toe  TouchDesignerCrash099.x64.2017.2300.1.dmp  TouchDesignerCrash099.x64.2017.5940.1.dmp  TouchDesignerCrash099.x64.2017.5940.2.dmp  TouchDesignerCrash099.x64.2017.5940.3.dmp  buttons.txt  flockingGpu.tox  sidebyside.tox  sliders.txt  test.tox
TD/scripts/: .#vhs.glsl  bandw.glsl  differ.py  effectChangeScript.py  osc_callbacks.py  scripts.py  server.py  sidebyside.frag  website.html
TD/scripts/Lux/: bandw.glsl  control.html  osc_callbacks.py  scripts.py  timer_callbacks.py  vhs.glsl
TD/scripts/Visuals/: .#flocking.frag  audio_data.frag  clone.frag  color_repeat.frag  fade_comp.frag  flocking.frag  flower_mod.frag  lines.frag  little_planet.frag  lumidots.frag  mask.frag  mosaic.frag  noise_displace.frag  oscin1_callbacks.py  overlay.frag  palette_map.frag  palette_mapper.py  palette_voronoi.frag  repeat.frag  shapes.frag  sine.frag  string_theory.frag  strobe.frag
TD/toxes/Visuals/: flockingGpu.tox  particlemover.tox
app/: Main.hs
src/: .#OSC.hs  Lib.hs  OSC.hs  Op.hs  Top.hs  Tree.hs
