name:                LambdaDesigner
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ulyssesp/LambdaDesigner#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Op
                     , OSC
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , bytestring-trie
                     , containers >= 0.5
                     , hosc
                     , lens
                     , transformers >= 0.5
  default-language:    Haskell2010

executable LambdaDesigner-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LambdaDesigner
  default-language:    Haskell2010

test-suite LambdaDesigner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LambdaDesigner
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/LambdaDesigner
