name:                LambdaDesigner
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ulyssesp/LambdaDesigner#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     LambdaDesigner.Lib
                     , LambdaDesigner.Op
                     , LambdaDesigner.OSC
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , bytestring-trie
                     , containers >= 0.5
                     , hosc
                     , lens
                     , lens-aeson
                     , matrix
                     , text
                     , transformers >= 0.5
                     , vector >= 0.11
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ulyssesp/LambdaDesigner
