name:                LambdaDesigner
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ulyssesp/LambdaDesigner#readme
license:             BSD3
license-file:        LICENSE
author:              Ulysses Popple
maintainer:          ulysses.popple@gmail.com
copyright:           2017 Ulysses Popple
synopsis:            A type-safe EDSL for TouchDesigner written in Haskell.
description:         TouchDesigner nodes written as functions in Haskell and sent to TouchDesigner as json.
category:            TouchDesigner
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     LambdaDesigner.Lib
                     , LambdaDesigner.JSONOutput
                     , LambdaDesigner.Op
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , bytestring-trie
                     , containers >= 0.5
                     , lens
                     , lens-aeson
                     , matrix
                     , text
                     , transformers >= 0.5
                     , vector >= 0.11
  default-language:    Haskell2010
  ghc-options:  -fwarn-incomplete-patterns

executable LambdaDesigner
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns
  build-depends:       base
                     , LambdaDesigner
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ulyssesp/LambdaDesigner
